--- a/src/main/webapp/templates/index.html
+++ b/src/main/webapp/templates/index.html
@@ -3,14 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Табло теннисного матча</title>
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
-<div>
-    <h1>Табло теннисного матча</h1>
-    <ul>
-        <li><a href="/new-match">Создать новый матч</a></li>
-        <li><a href="/matches">Сыграные матчи</a></li>
-    </ul>
+<div class="scoreboard home">
+    <div class="header">
+        <div class="cell">
+            <h1>Табло учета теннисного матча</h1>
+        </div>
+    </div>
+    <div class="buttons">
+        <div class="button"><a href="/new-match">Новый матч</a></div>
+        <div class="button"><a href="/matches">Завершенные матчи</a></div>
+    </div>
+
 </div>
 </body>
 </html>
